--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@theme-ui/presets": "^0.12.0",
+    "cuid": "^2.1.8",
     "next": "12.0.3",
     "next-connect": "^0.11.0",
     "react": "17.0.2",
