--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cuid": "^2.1.8",
     "next": "12.0.3",
     "next-connect": "^0.11.0",
+    "nextjs-progressbar": "0.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "theme-ui": "^0.12.0"
