--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-connect": "^0.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "^9.0.0-beta.5",
     "theme-ui": "^0.12.0"
   },
   "devDependencies": {
